edit hero image

--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion Style</title>
+    <title>FinPro-1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <Header class="header">
-        <h1 class="title">My Fashion</h1>
+        <h1 class="title">Shoes Footwear</h1>
         <nav class="nav-head">
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#">Portofolio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Blog</a>
@@ -34,8 +31,9 @@
             </ul>
         </nav>
     </Header>
-    <div class="parallax"></div>
-    <img class="fBaju" src="img/Baju.jpg" alt="Gambar Baju">
+    <div class="orderNow">
+        <button id="order-btn" class="btnorder">Order Now</button>
+    </div>
 </body>
 
 </html>
