--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinPro-1</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -34,6 +37,56 @@
     <div class="orderNow">
         <button id="order-btn" class="btnorder">Order Now</button>
     </div>
+
+    <footer class="footer">
+        <p class="copyright">
+            Copyright By FinPro-1
+        </p>
+        <div>
+            <h3 class="contact">Contact Us</h3>
+            <p class="Us">
+                <i class="fa-solid fa-location-dot"></i>
+                <span>
+                    Jl. Mojo, Karangasem, Kec. Laweyan, Kota Surakarta, Jawa Tengah 57145
+                </span>
+            </p>
+            <p class="Us">
+                <i class="fa-solid fa-envelope"></i>
+                <span>
+                    shoesfootwear@gmail.com
+                </span>
+            </p>
+            <p class="Us">
+                <i class="fa-brands fa-whatsapp"></i>
+                <span>+628779251052</span>
+            </p>
+        </div>
+        <div class="follow">
+            <h3 class="socialMedia">Follow Us</h3>
+            <div>
+                <p class="icon">
+                    <a href="https://www.facebook.com/zuck">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://twitter.com/elonmusk">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/hacktiv8id/">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.tiktok.com/@hacktiv8id">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                    <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="https://github.com/Final-Project-Hacktiv/FinPro-1">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
