--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FinPro-1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +19,7 @@
         <nav class="nav-head">
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Blog</a>
@@ -28,7 +28,7 @@
                     <a href="#">About US</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact US</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Todos</a>
@@ -49,7 +49,7 @@
 
     <footer class="footer">
         <p class="copyright">
-            Copyright By FinPro-1
+            Copyright © 2023 Group 2
         </p>
         <div>
             <h3 class="contact">Contact Us</h3>
@@ -97,7 +97,7 @@
         </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
