--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
         </div>
     </div>
 
+    <div class="Library">
+        <h1 class="titleLibrary">Trending Styles</h1>
+        <i class="fa-solid fa-arrow-right"></i>
+        <span class="paragraphLibrary">
+            Shop All Trending Styles
+        </span>
+
+        <div class="container-shoes" id="dataShoes">
+
+        </div>
+    </div>
+
+
     <footer class="footer">
         <p class="copyright">
             Copyright © 2023 Group 2
