--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,10 +21,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Blog</a>
+                    <a href="Blogs.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">About US</a>
+                    <a href="AboutUs.html">About US</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html">Contact US</a>
