--- a/Blogs.html
+++ b/Blogs.html
@@ -6,10 +6,13 @@
     <title>Blogs</title>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="css/blogs.css">
+    <link rel="stylesheet" href="css/blogs.css" />
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <!-- Fontawesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Icon CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 <body>
 <!-- Navbar -->
@@ -21,10 +24,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Blog</a>
+                    <a href="Blogs.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">About US</a>
+                    <a href="AboutUs.html">About US</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html">Contact US</a>
@@ -35,7 +38,8 @@
             </ul>
         </nav>
     </Header>
-
+    
+<!-- Content -->
     
 
 <!-- Footer -->
