Mengedit about us dan menambahkan foto

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -36,7 +36,7 @@
         </nav>
     </Header>
 
-    <section class="heor">
+    <section class="hero">
         <div class="heading">
             <h1>About US</h1>
         </div>
@@ -133,8 +133,8 @@
   
                     <div class="details">
                         <img src="img/team4.jpg" alt="">
-                        <strong>Amelia Alex</strong>
-                        <p>Ameliaalex@gmail.com</p>
+                        <strong>Nadia</strong>
+                        <p>ntama8709@gmail.com</p>
                     </div>
   
                     <div class="btn">
@@ -154,9 +154,9 @@
                     </div>
   
                     <div class="details">
-                        <img src="img/team4.jpg" alt="">
-                        <strong>Amelia Alex</strong>
-                        <p>Ameliaalex@gmail.com</p>
+                        <img src="img/team5.jpg" alt="">
+                        <strong>Muhammad Abrar Argianata</strong>
+                        <p>m.abrarargianata@gmail.com</p>
                     </div>
   
                     <div class="btn">
