--- a/AboutUs.html
+++ b/AboutUs.html
@@ -30,7 +30,7 @@
                     <a href="contact.html">Contact US</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Todos</a>
+                    <a href="todos.html">Todos</a>
                 </li>
             </ul>
         </nav>
