menambahkan konten dari halaman blog dan juga menambahkan beberapa aset yang diperlukan.

--- a/Blogs.html
+++ b/Blogs.html
@@ -1,147 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogs</title>
 
     <!-- My Style -->
     <link rel="stylesheet" href="css/blogs.css" />
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!-- Fontawesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Icon CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
-</head>
-<body>
-<!-- Navbar -->
-    <Header class="header">
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <section id="navbar">
+      <header class="header">
         <h1 class="title">Shoes Footwear</h1>
         <nav class="nav-head">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="Blogs.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="AboutUs.html">About US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html">Contact US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#">Todos</a>
-                </li>
-            </ul>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="Blogs.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="AboutUs.html">About US</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html">Contact US</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Todos</a>
+            </li>
+          </ul>
         </nav>
-    </Header>
-    
-<!-- Content -->
-    <div class="blog">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-    </div>
+      </header>
+    </section>
 
-<!-- Footer -->
-    <footer class="footer">
-        <p class="copyright">
-            Copyright © 2023 Group 2
-        </p>
+    <!-- Content -->
+    <section id="header" class="py-5">
+      <div class="container">
+        <div
+          class="row d-flex align-items-center justify-content-center text-center justify-content-lg-start text-lg-start"
+        >
+          <div class="header-content">
+            <span class="text-white">Winter Edition</span>
+            <h2 class="mt-2 mb-4 text-white">Upcoming Sell!</h2>
+            <a href="index.html" class="btn">More Detail</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="blogs" class="py-5">
+      <div class="container">
+        <div class="title-blog text-center py-5">
+          <h2 class="position-relative d-inline-block">Our Latest Blogs</h2>
+        </div>
+
+        <div class="row g-3">
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img src="https://statik.tempo.co/data/2022/05/21/id_1111360/1111360_720.jpg" alt="" />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Penampakan Nike Air Force 1 Louis Vuitton, Karya Virgil Abloh
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                "Sneaker Nike Air Force 1 Louis Vuitton hasil karya terakhir
+                desainer Virgil Abloh yan akan dipamerkan di New York, 20 Mei
+                2022. Beberapa kreasi terakhir desainer Off White dan Louis
+                Vuitton, Virgil Abloh bakal dipamerkan untuk umum di New York.
+                Pameran ini akan dibuka pada Sabtu (21/5).
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Fardi Bestari
+                </small>
+              </p>
+              <a
+                href="https://foto.tempo.co/read/97482/penampakan-nike-air-force-1-louis-vuitton-karya-virgil-abloh"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img src="https://statik.tempo.co/data/2022/09/01/id_1137666/1137666_720.jpg" alt="" />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Rise of The Sneakers Batam: Saatnya Sneakers Produk Lokal
+                Bersaing dengan Produk Internasional
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                digelar di Grand Batam Mall, 1-4 September 2022. Selain
+                menunjang pariwisata, kegiatan ini juga membuka peluang sneakers
+                produk lokal menjangkau pasar internasional. Kegiatan bazar
+                sneakers ini dipersembahkan oleh Simplemind Communications.
+                Menghadirkan berbagai brand sneakers, termasuk sneakers karya
+                anak lokal Indonesia.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Yogi Eka Sahputra,
+                  Istiqomatul Hayati
+                </small>
+              </p>
+              <a
+                href="https://travel.tempo.co/read/1629529/rise-of-the-sneakers-batam-saatnya-sneakers-produk-lokal-bersaing-dengan-produk-internasional"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img src="https://awsimages.detik.net.id/visual/2020/07/30/nike-air-jordan-dok-nike-2_169.jpeg?w=715&q=90" alt="" />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Penuh Drama-Konflik, Kisah Air Jordan Jadi Penyelamat Nike
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Film terbaru Ben Affleck, "Air," menghebohkan jagat perfilman
+                sejak trailernya ditayangkan selama Super Bowl LVII. Diangkat
+                dari kisah nyata, film ini mengikuti upaya Sonny Vaccaro,
+                seorang salesman Nike, yang berhasil mengontrak superstar bola
+                basket Michael Jordan yang sedang naik daun saat itu.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Mentari Puspadini, CNBC
+                  Indonesia
+                </small>
+              </p>
+              <a
+                href="https://www.cnbcindonesia.com/lifestyle/20230408180824-33-428236/penuh-drama-konflik-kisah-air-jordan-jadi-penyelamat-nike"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <section id="footer">
+      <footer class="footer">
+        <p class="copyright">Copyright © 2023 Group 2</p>
         <div>
-            <h3 class="contact">Contact Us</h3>
-            <p class="Us">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>
-                    Jl. Mojo, Karangasem, Kec. Laweyan, Kota Surakarta, Jawa Tengah 57145
-                </span>
-            </p>
-            <p class="Us">
-                <i class="fa-solid fa-envelope"></i>
-                <span>
-                    shoesfootwear@gmail.com
-                </span>
-            </p>
-            <p class="Us">
-                <i class="fa-brands fa-whatsapp"></i>
-                <span>+628779251052</span>
-            </p>
+          <h3 class="contact">Contact Us</h3>
+          <p class="Us">
+            <i class="fa-solid fa-location-dot"></i>
+            <span>
+              Jl. Mojo, Karangasem, Kec. Laweyan, Kota Surakarta, Jawa Tengah
+              57145
+            </span>
+          </p>
+          <p class="Us">
+            <i class="fa-solid fa-envelope"></i>
+            <span> shoesfootwear@gmail.com </span>
+          </p>
+          <p class="Us">
+            <i class="fa-brands fa-whatsapp"></i>
+            <span>+628779251052</span>
+          </p>
         </div>
         <div class="follow">
-            <h3 class="socialMedia">Follow Us</h3>
-            <div>
-                <p class="icon">
-                    <a href="https://www.facebook.com/zuck">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="https://twitter.com/elonmusk">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com/hacktiv8id/">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="https://www.tiktok.com/@hacktiv8id">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
-                    <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                    <a href="https://github.com/Final-Project-Hacktiv/FinPro-1">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                </p>
-            </div>
+          <h3 class="socialMedia">Follow Us</h3>
+          <div>
+            <p class="icon">
+              <a href="https://www.facebook.com/zuck">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a href="https://twitter.com/elonmusk">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="https://www.instagram.com/hacktiv8id/">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="https://www.tiktok.com/@hacktiv8id">
+                <i class="fa-brands fa-tiktok"></i>
+              </a>
+              <a
+                href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5"
+              >
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+              <a href="https://github.com/Final-Project-Hacktiv/FinPro-1">
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </p>
+          </div>
         </div>
-    </footer>
-<!-- Script -->
-<script src="js/responsive.js"></script>
-</body>
+      </footer>
+    </section>
+  </body>
 </html>
