Memperbarui name pada card di About Us dan menambahkan foto

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -70,8 +70,8 @@
   
                     <div class="details">
                         <img src="img/team1.jpg" alt="">
-                        <strong>Emma Olivia</strong>
-                        <p>Emmaolivia@gmail.com</p>
+                        <strong>Hani Fatul Hikmah</strong>
+                        <p>hani@gmail.com</p>
                     </div>
   
                     <div class="btn">
@@ -91,15 +91,15 @@
   
                     <div class="details">
                         <img src="img/team2.jpg" alt="">
-                        <strong>Sofia Adward</strong>
-                        <p>Sofiaadward@gmail.com</p>
+                        <strong>Muhamad Ahyar Yogi W</strong>
+                        <p>ahyar0647@gmail.com</p>
                     </div>
   
                     <div class="btn">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/muhamad.ahyar.0104"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/nay.kinay_/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             <div class="box">
@@ -111,9 +111,9 @@
                     </div>
   
                     <div class="details">
-                        <img src="img/team3.jpg" alt="">
-                        <strong>Touseeq Ijaz</strong>
-                        <p>Touseeqijaz@gmail.com</p>
+                        <img src="img/team3.jpeg" alt="">
+                        <strong>Putu Adi Saputra</strong>
+                        <p>adi@gmail.com</p>
                     </div>
   
                     <div class="btn">
