--- a/AboutUs.html
+++ b/AboutUs.html
@@ -113,7 +113,7 @@
                     <div class="details">
                         <img src="img/team3.jpeg" alt="">
                         <strong>Putu Adi Saputra</strong>
-                        <p>adi@gmail.com</p>
+                        <p>putujackson0@gmail.com</p>
                     </div>
   
                     <div class="btn">
