menambahkan konten di halaman blogs

--- a/Blogs.html
+++ b/Blogs.html
@@ -22,11 +22,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- Icon CDN -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- Navbar -->
@@ -34,23 +29,23 @@
       <header class="header">
         <h1 class="title">Shoes Footwear</h1>
         <nav class="nav-head">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="Blogs.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="AboutUs.html">About US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html">Contact US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="todos.html">Todos</a>
-                </li>
-            </ul>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="Blogs.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="AboutUs.html">About US</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html">Contact US</a>
+            </li>
+            <li class="nav-item">
+              <a href="todos.html">Todos</a>
+            </li>
+          </ul>
         </nav>
       </header>
     </section>
@@ -78,7 +73,10 @@
 
         <div class="row g-3">
           <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-            <img src="https://statik.tempo.co/data/2022/05/21/id_1111360/1111360_720.jpg" alt="" />
+            <img
+              src="https://statik.tempo.co/data/2022/05/21/id_1111360/1111360_720.jpg"
+              alt=""
+            />
             <div class="card-body px-0">
               <h4 class="card-title">
                 Penampakan Nike Air Force 1 Louis Vuitton, Karya Virgil Abloh
@@ -104,7 +102,10 @@
           </div>
 
           <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-            <img src="https://statik.tempo.co/data/2022/09/01/id_1137666/1137666_720.jpg" alt="" />
+            <img
+              src="https://statik.tempo.co/data/2022/09/01/id_1137666/1137666_720.jpg"
+              alt=""
+            />
             <div class="card-body px-0">
               <h4 class="card-title">
                 Rise of The Sneakers Batam: Saatnya Sneakers Produk Lokal
@@ -133,7 +134,10 @@
           </div>
 
           <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-            <img src="https://awsimages.detik.net.id/visual/2020/07/30/nike-air-jordan-dok-nike-2_169.jpeg?w=715&q=90" alt="" />
+            <img
+              src="https://awsimages.detik.net.id/visual/2020/07/30/nike-air-jordan-dok-nike-2_169.jpeg?w=715&q=90"
+              alt=""
+            />
             <div class="card-body px-0">
               <h4 class="card-title">
                 Penuh Drama-Konflik, Kisah Air Jordan Jadi Penyelamat Nike
@@ -153,6 +157,181 @@
               </p>
               <a
                 href="https://www.cnbcindonesia.com/lifestyle/20230408180824-33-428236/penuh-drama-konflik-kisah-air-jordan-jadi-penyelamat-nike"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img
+              src="https://www.mainbasket.com/thumbs/extra-large/https://www.mainbasket.com/uploads/post/2023/10/05/jaylen%20brown.jpg"
+              alt=""
+            />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Jaylen Brown: Desain Sepatu Sekarang Membosankan
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Bintang Boston Celtics Jaylen Brown mengeluarkan pernyataan
+                keras terhadap desain sepatu basket saat ini. Menurutnya, desain
+                yang ada sekarang terllau membosankan. Brown lebih senang ada di
+                era 90-an, di mana setiap sepatu punya ciri khas tersendiri.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Tora Nodisa
+                </small>
+              </p>
+              <a
+                href="https://www.mainbasket.com/r/15475/jaylen-brown-desain-sepatu-sekarang-membosankan"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img
+              src="https://akcdn.detik.net.id/community/media/visual/2022/11/15/sandal-bekas-salah-satu-pendiri-apple-steve-jobs-terjual-rp3-miliar-lebih.jpeg?w=862"
+              alt=""
+            />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Dilelang Sepasang Sneakers Jadul Apple, Harga Mulai dari Rp 754
+                Juta
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Sulit untuk membayangkan jika raksasa teknologi seperti Apple
+                berekspansi ke dunia mode. Namun, barang lelangan yang satu ini
+                bisa memberi gambaran.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Daniel Ngantung, wolipop
+                </small>
+              </p>
+              <a
+                href="https://wolipop.detik.com/fashion-news/d-6845737/dilelang-sepasang-sneakers-jadul-apple-harga-mulai-dari-rp-754-juta"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img
+              src="https://www.mainbasket.com/uploads/post/2023/05/11/bjorn%20gulden.jpg"
+              alt=""
+            />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Takut Rugi, adidas Bakal Jual Produk Yeezy yang Menumpuk di
+                Gudang
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Sejak memutuskan hubungan dengan rapper Ye (Kanye West), pada
+                bulan Oktober 2022 karena kasus anti-Semit, sepatu adidas Yeezy
+                yang dulu populer kini menumpuk di gudang. Awalnya mereka
+                berencana untuk menyumbangkan produk ini, dengan alasan
+                reputasi. Namun melihat neraca keuangan, pihak adidas
+                membatalkan rencana tersebut. Mereka mungkin akan menjual sisa
+                produk di gudang untuk mengurangi kerugian.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Tora Nodisa
+                </small>
+              </p>
+              <a
+                href="https://www.mainbasket.com/r/14538/takut-rugi-adidas-bakal-jual-produk-yeezy-yang-menumpuk-di-gudang#google_vignette"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img
+              src="https://akcdn.detik.net.id/community/media/visual/2023/02/26/antusias-pengunjung-luar-biasa-di-jakarta-sneaker-day-2023-2_169.jpeg?w=700&q=90"
+              alt=""
+            />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Antusias Pengunjung Luar Biasa di Jakarta Sneaker Day 2023
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Gelaran eksibisi sneaker dan streetwear berskala internasional
+                Jakarta Sneaker Day (JSD) kembali digelar secara offline di ICE
+                BSD Tangerang.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>dok. JSD - detikFinance
+                </small>
+              </p>
+              <a
+                href="https://www.mainbasket.com/r/15067/nike-bertahan-sebagai-merek-sneaker-terpopuler-di-dunia"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img
+              src="https://akcdn.detik.net.id/community/media/visual/2023/03/17/penyuka-sneakers-merapat-nih-rekomendasi-tempat-belanja-di-singapura-2.png?w=639"
+              alt=""
+            />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Penyuka Sneakers Merapat! Nih Rekomendasi Tempat Belanja di
+                Singapura
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Singapura terkenal sebagai surga belanja karena banyaknya
+                destinasi mulai dari mal hingga pedagang di pasar tradisional.
+                Berbagai barang branded dan unik bisa didapatkan, termasuk
+                sneakers-sneakers yang keren.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Angga Laraspati,
+                  detikTravel
+                </small>
+              </p>
+              <a
+                href="https://www.mainbasket.com/r/15067/nike-bertahan-sebagai-merek-sneaker-terpopuler-di-dunia"
+                class="btn"
+                >Read More</a
+              >
+            </div>
+          </div>
+
+          <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+            <img
+              src="https://www.mainbasket.com/uploads/post/2023/08/08/pasar%20sneaker.png"
+              alt=""
+            />
+            <div class="card-body px-0">
+              <h4 class="card-title">
+                Nike Bertahan Sebagai Merek Sneaker Terpopuler di Dunia
+              </h4>
+              <p class="card-text mt-3 text-muted">
+                Pasar sneaker pada tahun 2023 terus didominasi oleh beberapa
+                merek yang sukses dan populer, antara lain Nike, Adidas, dan New
+                Balance. Merek-merek ini menawarkan berbagai gaya, mulai dari
+                atasan rendah suede buatan Italia hingga atasan kanvas yang
+                dapat diandalkan. Merek terkenal lainnya di pasar sepatu kets
+                termasuk Converse, Vans, Reebok, dan Puma.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <span class="fw-bold">Author: </span>Tora Nodisa
+                </small>
+              </p>
+              <a
+                href="https://www.mainbasket.com/r/15067/nike-bertahan-sebagai-merek-sneaker-terpopuler-di-dunia"
                 class="btn"
                 >Read More</a
               >
