update icon web, dan beberapa tambahan desain

--- a/Blogs.html
+++ b/Blogs.html
@@ -22,6 +22,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Web Icon -->
+    <link href="img/png/logo-no-background.png" rel="shortcut icon" icon">
+    
   </head>
   <body>
     <!-- Navbar -->
