Membuat halaman home, todo pada bagian footer dan konten  menjadi responsive

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -73,9 +73,9 @@
                     </div>
   
                     <div class="details">
-                        <img src="img/team1.jpg" alt="">
+                        <img src="img/team1.jpeg" alt="">
                         <strong>Hani Fatul Hikmah</strong>
-                        <p>hani@gmail.com</p>
+                        <p>fatul2124@gmail.com</p>
                     </div>
   
                     <div class="btn">
