--- a/index.html
+++ b/index.html
@@ -15,28 +15,19 @@
     <link href="img/png/logo-no-background.png" rel="shortcut icon" icon">
 </head>
 <body>
-    <Header class="header">
-        <h1 class="title">Shoes Footwear</h1>
-        <nav class="nav-head">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="Blogs.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="AboutUs.html">About US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html">Contact US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="todos.html">Todos</a>
-                </li>
-            </ul>
-        </nav>
-    </Header>
+    <nav class="navbar">
+        <div class="logo">Shoes Footwear</div>
+        <ul class="nav-links" id="navLinks">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Blogs.html">Blog</a></li>
+            <li><a href="AboutUs.html">Abouts US</a></li>
+            <li><a href="contact.html">Contact US</a></li>
+            <li><a href="todos.html">Todos</a></li>
+        </ul>
+        <div class="icon" id="menuIcon">
+            <i class="fas fa-bars"></i>
+        </div>
+    </nav>
     <div class="orderNow">
         <div class="slideshow-container">
             <div class="slide-show">
