Memperbarui navbar dan footer di todos

--- a/todos.html
+++ b/todos.html
@@ -30,7 +30,7 @@
     </nav>
     <main>
 
-    <main>
+    <main style="min-height: 70vh;">
             <h1>Todo App</h1>
             <form class="todoForm">
                 <input type="text" class="todoInput" placeholder="Add a Todo...">
