Memperbarui keseluruhan dari revisian

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,29 +16,7 @@
     <link href="img/png/logo-no-background.png" rel="shortcut icon" icon">
 </head>
 <body>
-    <Header class="header">
-        <h1 class="title">Shoes Footwear</h1>
-        <nav class="nav-head">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="Blogs.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="AboutUs.html">About US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html">Contact US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="todos.html">Todos</a>
-                </li>
-            </ul>
-        </nav>
-    </Header>
-
+  <header-app></header-app>
     <section class="page">
         <div class="container">
           <div class="row">
@@ -148,54 +127,9 @@
       ></iframe>
     </body>
 
-    <footer class="footer">
-        <p class="copyright">
-            Copyright © 2023 Group 2
-        </p>
-        <div>
-            <h3 class="contact">Contact Us</h3>
-            <p class="Us">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>
-                    Jl. Mojo, Karangasem, Kec. Laweyan, Kota Surakarta, Jawa Tengah 57145
-                </span>
-            </p>
-            <p class="Us">
-                <i class="fa-solid fa-envelope"></i>
-                <span>
-                    shoesfootwear@gmail.com
-                </span>
-            </p>
-            <p class="Us">
-                <i class="fa-brands fa-whatsapp"></i>
-                <span>+628779251052</span>
-            </p>
-        </div>
-        <div class="follow">
-            <h3 class="socialMedia">Follow Us</h3>
-            <div>
-                <p class="icon">
-                    <a href="https://www.facebook.com/zuck">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="https://twitter.com/elonmusk">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com/hacktiv8id/">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="https://www.tiktok.com/@hacktiv8id">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
-                    <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                    <a href="https://github.com/Final-Project-Hacktiv/FinPro-1">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                </p>
-            </div>
-        </div>
-    </footer>
+    <footer-app></footer-app>
+    
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
