--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,45 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
 
     <!-- Style -->
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/aboutUs.css">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Web Icon -->
     <link href="img/png/logo-no-background.png" rel="shortcut icon" icon">
 
 </head>
-<body>
-<!-- Navbar -->
-    <Header class="header">
-        <h1 class="title">Shoes Footwear</h1>
-        <nav class="nav-head">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="Blogs.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="AboutUs.html">About US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html">Contact US</a>
-                </li>
-                <li class="nav-item">
-                    <a href="todos.html">Todos</a>
-                </li>
-            </ul>
-        </nav>
-    </Header>
 
+<body>
+
+    <header-app></header-app>
     <section class="hero">
         <div class="heading">
             <h1>About US</h1>
@@ -47,9 +31,10 @@
         <div class="container">
             <div class="hero-content">
                 <h2>Selamat Datang di Shoes Footwear!</h2>
-                <p>Shoes Footwear lahir dari hasrat untuk menciptakan pengalaman belanja sepatu yang istimewa. 
-                    Didirikan pada tahun 2017, kami telah berkembang dari sebuah toko sepatu lokal ke toko sepatu daring terkemuka yang melayani pelanggan di seluruh dunia. 
-                    Kami telah melalui perjalanan yang luar biasa dalam membawa sepatu berkualitas 
+                <p>Shoes Footwear lahir dari hasrat untuk menciptakan pengalaman belanja sepatu yang istimewa.
+                    Didirikan pada tahun 2017, kami telah berkembang dari sebuah toko sepatu lokal ke toko sepatu daring
+                    terkemuka yang melayani pelanggan di seluruh dunia.
+                    Kami telah melalui perjalanan yang luar biasa dalam membawa sepatu berkualitas
                     tinggi kepada para pelanggan kami.</p>
             </div>
             <div class="hero-image">
@@ -66,162 +51,120 @@
         <div class="container">
             <div class="box">
                 <div class="top-bar"></div>
-                    <div class="nav">
-                        <i class="verify fas fa-check-circle"></i>
-                        <input type="checkbox" class="heart-btn" id="heart-btn">
-                        <label  class="heart"></label>
-                    </div>
-  
-                    <div class="details">
-                        <img src="img/team1.jpeg" alt="">
-                        <strong>Hani Fatul Hikmah</strong>
-                        <p>fatul2124@gmail.com</p>
-                    </div>
-  
-                    <div class="btn">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
+                <div class="nav">
+                    <i class="verify fas fa-check-circle"></i>
+                    <input type="checkbox" class="heart-btn" id="heart-btn">
+                    <label class="heart"></label>
                 </div>
-            <div class="box">
-                <div class="top-bar"></div>
-                    <div class="nav">
-                        <i class="verify fas fa-check-circle"></i>
-                        <input type="checkbox" class="heart-btn" id="heart-btn">
-                        <label  class="heart"></label>
-                    </div>
-  
-                    <div class="details">
-                        <img src="img/team2.jpg" alt="">
-                        <strong>Muhamad Ahyar Yogi W</strong>
-                        <p>ahyar0647@gmail.com</p>
-                    </div>
-  
-                    <div class="btn">
-                        <a href="https://www.facebook.com/muhamad.ahyar.0104"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/nay.kinay_/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5"><i class="fab fa-youtube"></i></a>
-                    </div>
+
+                <div class="details">
+                    <img src="img/team1.jpeg" alt="">
+                    <strong>Hani Fatul Hikmah</strong>
+                    <p>fatul2124@gmail.com</p>
                 </div>
+
+                <div class="btn">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
             <div class="box">
                 <div class="top-bar"></div>
-                    <div class="nav">
-                        <i class="verify fas fa-check-circle"></i>
-                        <input type="checkbox" class="heart-btn" id="heart-btn">
-                        <label  class="heart"></label>
-                    </div>
-  
-                    <div class="details">
-                        <img src="img/team3.jpeg" alt="">
-                        <strong>Putu Adi Saputra</strong>
-                        <p>putujackson0@gmail.com</p>
-                    </div>
-  
-                    <div class="btn">
-                        <a href="https://www.facebook.com/putu.a.saputra.39"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://twitter.com/MJefv"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/putu.adii/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.youtube.com/@putuadisaputra4773/featured"><i class="fab fa-youtube"></i></a>
-                    </div>
-                  </div>
+                <div class="nav">
+                    <i class="verify fas fa-check-circle"></i>
+                    <input type="checkbox" class="heart-btn" id="heart-btn">
+                    <label class="heart"></label>
+                </div>
+
+                <div class="details">
+                    <img src="img/team2.jpg" alt="">
+                    <strong>Muhamad Ahyar Yogi W</strong>
+                    <p>ahyar0647@gmail.com</p>
+                </div>
+
+                <div class="btn">
+                    <a href="https://www.facebook.com/muhamad.ahyar.0104"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/nay.kinay_/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5"><i
+                            class="fab fa-youtube"></i></a>
+                </div>
+            </div>
             <div class="box">
                 <div class="top-bar"></div>
-                    <div class="nav">
-                        <i class="verify fas fa-check-circle"></i>
-                        <input type="checkbox" class="heart-btn" id="heart-btn">
-                        <label  class="heart"></label>
-                    </div>
-  
-                    <div class="details">
-                        <img src="img/team4.jpg" alt="">
-                        <strong>Nadia</strong>
-                        <p>ntama8709@gmail.com</p>
-                    </div>
-  
-                    <div class="btn">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
+                <div class="nav">
+                    <i class="verify fas fa-check-circle"></i>
+                    <input type="checkbox" class="heart-btn" id="heart-btn">
+                    <label class="heart"></label>
+                </div>
+
+                <div class="details">
+                    <img src="img/team3.jpeg" alt="">
+                    <strong>Putu Adi Saputra</strong>
+                    <p>putujackson0@gmail.com</p>
+                </div>
+
+                <div class="btn">
+                    <a href="https://www.facebook.com/putu.a.saputra.39"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/MJefv"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/putu.adii/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@putuadisaputra4773/featured"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="top-bar"></div>
+                <div class="nav">
+                    <i class="verify fas fa-check-circle"></i>
+                    <input type="checkbox" class="heart-btn" id="heart-btn">
+                    <label class="heart"></label>
+                </div>
+
+                <div class="details">
+                    <img src="img/team4.jpg" alt="">
+                    <strong>Nadia</strong>
+                    <p>ntama8709@gmail.com</p>
+                </div>
+
+                <div class="btn">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
             <div>
                 <div class="box">
-                <div class="top-bar"></div>
+                    <div class="top-bar"></div>
                     <div class="nav">
                         <i class="verify fas fa-check-circle"></i>
                         <input type="checkbox" class="heart-btn" id="heart-btn">
-                        <label  class="heart"></label>
+                        <label class="heart"></label>
                     </div>
-  
+
                     <div class="details">
                         <img src="img/team5.jpg" alt="">
                         <strong>Muhammad Abrar Argianata</strong>
                         <p>m.abrarargianata@gmail.com</p>
                     </div>
-  
+
                     <div class="btn">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
-            </div>        </div>
-        </div>
-    </section>
-    
-<!-- Footer -->
-    <footer class="footer">
-        <p class="copyright">
-            Copyright © 2023 Group 2
-        </p>
-        <div>
-            <h3 class="contact">Contact Us</h3>
-            <p class="Us">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>
-                    Jl. Mojo, Karangasem, Kec. Laweyan, Kota Surakarta, Jawa Tengah 57145
-                </span>
-            </p>
-            <p class="Us">
-                <i class="fa-solid fa-envelope"></i>
-                <span>
-                    shoesfootwear@gmail.com
-                </span>
-            </p>
-            <p class="Us">
-                <i class="fa-brands fa-whatsapp"></i>
-                <span>+628779251052</span>
-            </p>
-        </div>
-        <div class="follow">
-            <h3 class="socialMedia">Follow Us</h3>
-            <div>
-                <p class="icon">
-                    <a href="https://www.facebook.com/zuck">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="https://twitter.com/elonmusk">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com/hacktiv8id/">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="https://www.tiktok.com/@hacktiv8id">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a>
-                    <a href="https://www.youtube.com/playlist?list=PL7LE1AZNMIIhDMm3IUBvlyiffscogXbK5">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                    <a href="https://github.com/Final-Project-Hacktiv/FinPro-1">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                </p>
+                </div>
             </div>
         </div>
-    </footer>
+    </section>
+
+    <!-- Footer -->
+    <footer-app></footer-app>
+
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
 </body>
+
 </html>
