--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,7 @@
 
   <script src="js/header.js"></script>
   <script src="js/footer.js"></script>
+  <script src="js/contact.js"></script>
 </body>
 
 </html>
