--- a/AboutUs.html
+++ b/AboutUs.html
@@ -165,6 +165,7 @@
 
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/aboutUs.js"></script>
 </body>
 
 </html>
